--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -36,6 +36,16 @@
   ======================================================== -->
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SZYFPLPPB9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SZYFPLPPB9');
+</script>
+
 <body>
 
   <!-- ======= Header ======= -->
