--- a/index.html
+++ b/index.html
@@ -36,20 +36,15 @@
   ======================================================== -->
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SZYFPLPPB9"></script>
 <script>
-  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-  ga('create', 'G-SZYFPLPPB9', 'auto');
-  
-  // Replace the following lines with the plugins you want to use.
-  ga('require', 'eventTracker');
-  ga('require', 'outboundLinkTracker');
-  ga('require', 'urlChangeTracker');
-  // ...
-  
-  ga('send', 'pageview');
-  </script>
-  <script async src="https://www.google-analytics.com/analytics.js"></script>
-  <script async src="./autotrack.js"></script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SZYFPLPPB9');
+</script>
 
 <body>
 
