--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             }); var f = d.getElementsByTagName(s)[0],
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GT-MJJRQKV');</script>
+        })(window, document, 'script', 'dataLayer', 'G-SZYFPLPPB9');</script>
     <!-- End Google Tag Manager -->
     <title>Google Analytics Tutorials</title>
 </head>
@@ -51,7 +51,7 @@
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GT-MJJRQKV" height="0" width="0"
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-SZYFPLPPB9" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 </body>
